--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "animejs": "^3.1.0",
     "core-js": "^3.4.4",
+    "hamburgers": "^1.1.3",
     "sal.js": "^0.7.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
