--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,6 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
-    npm install yarn
-    yarn
-    yarn build
-  displayName: 'yarn install and build'
+    npm install
+    npm run build
+  displayName: 'npm install and build'
