Update azure-pipelines.yml for Azure Pipelines
/home/vsts/work/1/s path

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,6 @@ steps:
 
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    PathtoPublish: '/home/vsts/work/1/s'
     ArtifactName: 'frontend-drop'
     publishLocation: 'Container'
