Update azure-pipelines.yml for Azure Pipelines
change pathToPublish path

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,6 @@ steps:
 
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '/home/vsts/work/1/s'
+    PathtoPublish: '$(Build.SourcesDirectory)/dist'
     ArtifactName: 'frontend-drop'
     publishLocation: 'Container'
