--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "animejs": "^3.1.0",
+    "axios": "^0.19.2",
     "core-js": "^3.4.4",
     "hamburgers": "^1.1.3",
+    "moment": "^2.24.0",
     "sal.js": "^0.7.1",
     "typed.js": "^2.0.11",
     "vue": "^2.6.10",
