--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.4.4",
     "element-ui": "^2.13.0",
+    "firebase": "^7.14.0",
     "hamburgers": "^1.1.3",
     "moment": "^2.24.0",
     "sal.js": "^0.7.1",
